// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContentCard > Snapshot Tests > should match snapshot with SCORM package 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div
        class="flex-1 min-w-0"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight flex items-center gap-2 flex-wrap"
        >
          <svg
            class="lucide lucide-video h-5 w-5 flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m22 8-6 4 6 4V8Z"
            />
            <rect
              height="12"
              rx="2"
              ry="2"
              width="14"
              x="2"
              y="6"
            />
          </svg>
          <span
            class="truncate"
          >
            Introduction to Business Technology
          </span>
        </h3>
        <p
          class="text-sm text-muted-foreground mt-2 line-clamp-2"
        >
          A comprehensive introduction to modern business technology
        </p>
      </div>
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-green-500/10 text-green-500"
        >
          published
        </div>
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-blue-500/10 text-blue-500"
        >
          media
        </div>
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-green-500/10 text-green-500"
        >
          <svg
            class="lucide lucide-eye h-3 w-3 mr-1"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7Z"
            />
            <circle
              cx="12"
              cy="12"
              r="3"
            />
          </svg>
          Published
        </div>
      </div>
    </div>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div
      class="space-y-4"
    >
      <div
        class="flex items-center gap-2 text-sm"
      >
        <svg
          class="lucide lucide-building2 h-4 w-4 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 22V4a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v18Z"
          />
          <path
            d="M6 12H4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h2"
          />
          <path
            d="M18 9h2a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-2"
          />
          <path
            d="M10 6h4"
          />
          <path
            d="M10 10h4"
          />
          <path
            d="M10 14h4"
          />
          <path
            d="M10 18h4"
          />
        </svg>
        <span
          class="font-medium"
        >
          Business Technology
        </span>
      </div>
      <div
        class="rounded-md overflow-hidden bg-muted"
      >
        <img
          alt="Introduction to Business Technology"
          class="w-full h-32 object-cover"
          src="https://example.com/thumbnails/scorm-1.jpg"
        />
      </div>
      <div
        class="flex items-center gap-4 flex-wrap text-sm"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            class="lucide lucide-hard-drive h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="22"
              x2="2"
              y1="12"
              y2="12"
            />
            <path
              d="M5.45 5.11 2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"
            />
            <line
              x1="6"
              x2="6.01"
              y1="16"
              y2="16"
            />
            <line
              x1="10"
              x2="10.01"
              y1="16"
              y2="16"
            />
          </svg>
          <span
            class="text-muted-foreground"
          >
            50.0 MB
          </span>
        </div>
      </div>
      <div
        class="pt-4 border-t"
      >
        <div
          class="flex items-center justify-between text-sm"
        >
          <span
            class="text-muted-foreground"
          >
            Used in courses
          </span>
          <span
            class="font-medium"
          >
            5
          </span>
        </div>
      </div>
      <div
        class="pt-4 border-t space-y-2"
      >
        <div
          class="flex items-center justify-between text-sm"
        >
          <span
            class="text-muted-foreground"
          >
            Total Attempts
          </span>
          <span
            class="font-medium"
          >
            120
          </span>
        </div>
        <div
          class="flex items-center justify-between text-sm"
        >
          <span
            class="text-muted-foreground"
          >
            Average Score
          </span>
          <span
            class="font-medium"
          >
            85.5
            %
          </span>
        </div>
      </div>
      <div
        class="pt-4 border-t flex items-center gap-2 text-xs text-muted-foreground"
      >
        <svg
          class="lucide lucide-calendar h-3 w-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
        </svg>
        <span>
          Created 
          12/1/2025
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContentCard > Snapshot Tests > should match snapshot with content list item 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div
        class="flex-1 min-w-0"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight flex items-center gap-2 flex-wrap"
        >
          <svg
            class="lucide lucide-package h-5 w-5 flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m7.5 4.27 9 5.15"
            />
            <path
              d="M21 8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16Z"
            />
            <path
              d="m3.3 7 8.7 5 8.7-5"
            />
            <path
              d="M12 22V12"
            />
          </svg>
          <span
            class="truncate"
          >
            Introduction to Business Technology
          </span>
        </h3>
        <p
          class="text-sm text-muted-foreground mt-2 line-clamp-2"
        >
          A comprehensive introduction to modern business technology
        </p>
      </div>
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-green-500/10 text-green-500"
        >
          published
        </div>
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-purple-500/10 text-purple-500"
        >
          scorm
        </div>
      </div>
    </div>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div
      class="space-y-4"
    >
      <div
        class="flex items-center gap-2 text-sm"
      >
        <svg
          class="lucide lucide-building2 h-4 w-4 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 22V4a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v18Z"
          />
          <path
            d="M6 12H4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h2"
          />
          <path
            d="M18 9h2a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-2"
          />
          <path
            d="M10 6h4"
          />
          <path
            d="M10 10h4"
          />
          <path
            d="M10 14h4"
          />
          <path
            d="M10 18h4"
          />
        </svg>
        <span
          class="font-medium"
        >
          Business Technology
        </span>
      </div>
      <div
        class="rounded-md overflow-hidden bg-muted"
      >
        <img
          alt="Introduction to Business Technology"
          class="w-full h-32 object-cover"
          src="https://example.com/thumbnails/scorm-1.jpg"
        />
      </div>
      <div
        class="flex items-center gap-4 flex-wrap text-sm"
      />
      <div
        class="pt-4 border-t flex items-center gap-2 text-xs text-muted-foreground"
      >
        <svg
          class="lucide lucide-calendar h-3 w-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
        </svg>
        <span>
          Created 
          12/1/2025
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContentCard > Snapshot Tests > should match snapshot with media file 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div
        class="flex-1 min-w-0"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight flex items-center gap-2 flex-wrap"
        >
          <svg
            class="lucide lucide-video h-5 w-5 flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m22 8-6 4 6 4V8Z"
            />
            <rect
              height="12"
              rx="2"
              ry="2"
              width="14"
              x="2"
              y="6"
            />
          </svg>
          <span
            class="truncate"
          >
            Introduction to Programming
          </span>
        </h3>
        <p
          class="text-sm text-muted-foreground mt-2 line-clamp-2"
        >
          A comprehensive introduction to programming concepts
        </p>
      </div>
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-yellow-500/10 text-yellow-500"
        >
          draft
        </div>
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-blue-500/10 text-blue-500"
        >
          video
        </div>
      </div>
    </div>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div
      class="space-y-4"
    >
      <div
        class="flex items-center gap-2 text-sm"
      >
        <svg
          class="lucide lucide-building2 h-4 w-4 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 22V4a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v18Z"
          />
          <path
            d="M6 12H4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h2"
          />
          <path
            d="M18 9h2a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-2"
          />
          <path
            d="M10 6h4"
          />
          <path
            d="M10 10h4"
          />
          <path
            d="M10 14h4"
          />
          <path
            d="M10 18h4"
          />
        </svg>
        <span
          class="font-medium"
        >
          Computer Science
        </span>
      </div>
      <div
        class="rounded-md overflow-hidden bg-muted"
      >
        <img
          alt="Introduction to Programming"
          class="w-full h-32 object-cover"
          src="https://example.com/thumbnails/intro-programming.jpg"
        />
      </div>
      <div
        class="flex items-center gap-4 flex-wrap text-sm"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            class="lucide lucide-hard-drive h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="22"
              x2="2"
              y1="12"
              y2="12"
            />
            <path
              d="M5.45 5.11 2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"
            />
            <line
              x1="6"
              x2="6.01"
              y1="16"
              y2="16"
            />
            <line
              x1="10"
              x2="10.01"
              y1="16"
              y2="16"
            />
          </svg>
          <span
            class="text-muted-foreground"
          >
            150.0 MB
          </span>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <svg
            class="lucide lucide-video h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m22 8-6 4 6 4V8Z"
            />
            <rect
              height="12"
              rx="2"
              ry="2"
              width="14"
              x="2"
              y="6"
            />
          </svg>
          <span
            class="text-muted-foreground"
          >
            30m
          </span>
        </div>
      </div>
      <div
        class="pt-4 border-t"
      >
        <div
          class="flex items-center justify-between text-sm"
        >
          <span
            class="text-muted-foreground"
          >
            Used in courses
          </span>
          <span
            class="font-medium"
          >
            8
          </span>
        </div>
      </div>
      <div
        class="pt-4 border-t flex items-center gap-2 text-xs text-muted-foreground"
      >
        <svg
          class="lucide lucide-calendar h-3 w-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
        </svg>
        <span>
          Created 
          12/1/2025
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContentCard > Snapshot Tests > should match snapshot with onClick handler 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm cursor-pointer transition-colors hover:bg-accent"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div
        class="flex-1 min-w-0"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight flex items-center gap-2 flex-wrap"
        >
          <svg
            class="lucide lucide-package h-5 w-5 flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m7.5 4.27 9 5.15"
            />
            <path
              d="M21 8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16Z"
            />
            <path
              d="m3.3 7 8.7 5 8.7-5"
            />
            <path
              d="M12 22V12"
            />
          </svg>
          <span
            class="truncate"
          >
            Introduction to Business Technology
          </span>
        </h3>
        <p
          class="text-sm text-muted-foreground mt-2 line-clamp-2"
        >
          A comprehensive introduction to modern business technology
        </p>
      </div>
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-green-500/10 text-green-500"
        >
          published
        </div>
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-purple-500/10 text-purple-500"
        >
          scorm
        </div>
      </div>
    </div>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div
      class="space-y-4"
    >
      <div
        class="flex items-center gap-2 text-sm"
      >
        <svg
          class="lucide lucide-building2 h-4 w-4 text-muted-foreground"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 22V4a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v18Z"
          />
          <path
            d="M6 12H4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h2"
          />
          <path
            d="M18 9h2a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-2"
          />
          <path
            d="M10 6h4"
          />
          <path
            d="M10 10h4"
          />
          <path
            d="M10 14h4"
          />
          <path
            d="M10 18h4"
          />
        </svg>
        <span
          class="font-medium"
        >
          Business Technology
        </span>
      </div>
      <div
        class="rounded-md overflow-hidden bg-muted"
      >
        <img
          alt="Introduction to Business Technology"
          class="w-full h-32 object-cover"
          src="https://example.com/thumbnails/scorm-1.jpg"
        />
      </div>
      <div
        class="flex items-center gap-4 flex-wrap text-sm"
      />
      <div
        class="pt-4 border-t flex items-center gap-2 text-xs text-muted-foreground"
      >
        <svg
          class="lucide lucide-calendar h-3 w-3"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 2v4"
          />
          <path
            d="M16 2v4"
          />
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="4"
          />
          <path
            d="M3 10h18"
          />
        </svg>
        <span>
          Created 
          12/1/2025
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContentCard > Snapshot Tests > should match snapshot without metadata 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <div
      class="flex items-start justify-between gap-4"
    >
      <div
        class="flex-1 min-w-0"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight flex items-center gap-2 flex-wrap"
        >
          <svg
            class="lucide lucide-package h-5 w-5 flex-shrink-0"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m7.5 4.27 9 5.15"
            />
            <path
              d="M21 8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16Z"
            />
            <path
              d="m3.3 7 8.7 5 8.7-5"
            />
            <path
              d="M12 22V12"
            />
          </svg>
          <span
            class="truncate"
          >
            Introduction to Business Technology
          </span>
        </h3>
        <p
          class="text-sm text-muted-foreground mt-2 line-clamp-2"
        >
          A comprehensive introduction to modern business technology
        </p>
      </div>
      <div
        class="flex flex-col gap-2"
      >
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-green-500/10 text-green-500"
        >
          published
        </div>
        <div
          class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 bg-purple-500/10 text-purple-500"
        >
          scorm
        </div>
      </div>
    </div>
  </div>
</div>
`;
